--- a/css/main.css
+++ b/css/main.css
@@ -1,162 +1,247 @@
-body {
-    margin: 10px;
-    background-color: #BD7530;
-
+*{
+  margin: 0;
+  padding: 0;
 }
-
 
 .header {
-    height: 200px;
-    width: 100%;
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(56,87,35,1.0), rgba(219,100,19,1.0));
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
-.katabrain {
-    display: flex;
-    height: 200px;
-    width: 200px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left;
+nav{
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.katatitle{
-    position:absolute;
-    font-size: 64pt;
-    text-align: center;
-    left: 50%;
-    top: 15%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
-    
-}
-.katatitle p {
-    display: inline-block;
-    line-height: normal;
-    vertical-align: middle;
-    }
-
-.IK {
-    position:absolute;
-    top: 5px;
-    right: 10px;
-    height: 200px;
-    width: 100%;
-    background-size: contain; 
-    background-repeat: no-repeat;
-    background-position: right;
+nav img{
+  width: 250px;
 }
 
-.kata-ne {
-    margin: 10px;
-    font-size: 18pt;
-    background-color: #AC4410;
+.nav-links{
+  flex: 1;
+  text-align: right;
+}
+.nav-links ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
 }
 
-.scifi-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.nav-links ul li a{
+  color: #ffff;
+  text-decoration: none;
+  font-size: 13px;
+}
+.nav-links ul li::after{
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #fff;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+.nav-links ul li:hover::after{
+  width: 100%;
 }
 
-.kata-scifi {
-    margin: 10px;
-    height: 500px;
-    font-size: 18pt;
-    background-color: #3D3A30;
+.text-box{
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+
 }
 
-.scifi-photos {
-    position: relative;
+.text-box h1{
+  font-size: 62px;
+}
+
+.text-box p{
+  margin: 10px 0 40px;
+  font-size: 14px;
+  color: #fff;
+}
+
+.hero-btn{
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn:hover{
+  border: 1px solid #f44336;
+  background: #f44336;
+  transition: 1s;
+}
+
+nav .fa {
+  display: none;
+}
+
+@media(max-width: 700px){
+  .text-box h1{
+    font-size: 20px;
+  }
+  .nav-links ul li {
     display: block;
-    width: 100%;
-    max-width: 400px;
-    height: 500px;
-    margin: 10px;
-}
-
-.pic {
+  }
+  .nav-links{
     position: absolute;
+    background: #f44336;
+    height: 100vh;
+    width: 200px;
     top: 0;
-    left: 0;
-    width: 400px;
-    height: 500px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    -webkit-animation: fade 20s infinite;
-    animation: fade 20s infinite;
-}
-
-#p1 {
-    animation-delay: 0s;
-    background-image: url('bestbuds.png');
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
   }
-#p2 {
-    background-image: url('cheezbeer.JPG');
-    animation-delay: 5s;
-}
-#p3 {
-    background-image: url('closeup.png');
-    animation-delay: 10s;
-}
-#p4 {
-    background-image: url('closeup2.png');
-    animation-delay: 20s;
-}
-
-  @-webkit-keyframes fade {
-    0% {
-      opacity: 1;
-    }
-    15% {
-      opacity: 1;
-    }
-    25% {
-      opacity: 0;
-    }
-    90% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes fade {
-    0% {
-      opacity: 1;
-    }
-    15% {
-      opacity: 1;
-    }
-    25% {
-      opacity: 0;
-    }
-    90% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-
-.resource-wrapper {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-.rec-photo {
-    display: flex;
-    padding: 10px;
-    height: 200px;
-    width: 300px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.socials {
+  nav .fa {
+    display: block;
+    color: #fff;
     margin: 10px;
-    background-color: #AC4410;
+    font-size: 22px;
+    cursor: pointer;
+  }
+
+  .nav-links ul{
+    padding: 30px;
+  }
+}
+/* ABOUT KATA */
+.about-kata{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+  
+}
+h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
 }
 
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
 
+.row-col{
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px;
+}
+
+.row-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+@media(max-width: 700px){
+  .row{
+    flex-direction: column;
+  } 
+}
+/* Resources */
+.resources{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.resources-row{
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+
+.resources-row img{
+  width: 100%;
+  display: block;
+}
+
+.layer{
+  background: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+.layer:hover{
+  background: rgba(226,0,0,0.7);
+}
+
+.layer h3{
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  transition: 0.5%;
+}
+
+.layer:hover h3{
+  bottom: 49%;
+  opacity: 1;
+}
+
+.footer{
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+}
+
+.footer h4{
+  margin-bottom: 25px;
+  margin-top: 20px;
+  font-weight: 600;
+}
+
+.icons .fa{
+  color:#f44336;
+  margin: 0 13px;
+  cursor: pointer;
+  padding: 18px 0;
+}
