--- a/css/main.css
+++ b/css/main.css
@@ -124,19 +124,27 @@ nav .fa {
     padding: 30px;
   }
 }
+
+
 /* ABOUT KATA */
+
 .about-kata{
+  background: rgba(73,67,68,1.0);
+}
+
+
+.about-kata-rows{
   width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 100px;
-  
 }
-h1{
+
+.about-kata-rows h1{
   font-size: 36px;
   font-weight: 600;
 }
-p{
+.about-kata-rows p{
   color: #777;
   font-size: 14px;
   font-weight: 300;
@@ -150,7 +158,7 @@ p{
   justify-content: space-between;
 }
 
-.row-col{
+.about-kata-rows .row-col{
   flex-basis: 31%;
   background: #fff3f3;
   border-radius: 10px;
@@ -160,7 +168,7 @@ p{
   transition: 0.5s;
 }
 
-h3{
+.about-kata-rows h3{
   text-align: center;
   font-weight: 600;
   margin: 10px;
@@ -226,6 +234,9 @@ h3{
   bottom: 49%;
   opacity: 1;
 }
+
+
+/* FOOTER */
 
 .footer{
   width: 100%;
